Added Material design buttons

--- a/drivetrekConsumerApp/src/main/res/values/strings.xml
+++ b/drivetrekConsumerApp/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="login">Login</string>
+    <string name="or">or</string>
+    <string name="create_account">Create Account</string>
 </resources>
